--- a/Dex/client/readme
+++ b/Dex/client/readme
@@ -12,8 +12,10 @@ if need to install components here is the list of commands:
 npx shadcn@latest add button
 npx shadcn@latest add card
 npx shadcn@latest add input
+npx shadcn@latest add popover
 npx shadcn@latest add select
 npx shadcn@latest add separator
+npx shadcn@latest add switch
 npx shadcn@latest add toast
 npx shadcn@latest add tooltip
 
